2009-09-24  Dominique Dumont  <domi.dumont@free.fr> 1.001

	* Initial release 
